unpackaged/objects/copado__Step__c.object
<CustomObject>
	<fields>
		<fullName>copado__ApiName__c</fullName>
		<label>Api Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Attachment_Id__c</fullName>
		<label>Attachment Id</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Automated_Behaviour__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Automation that originated this deployment step.</description>
		<inlineHelpText>Automation that originated this deployment step.</inlineHelpText>
		<label>Automated Behaviour</label>
		<referenceTo>copado__Quality_Gate__c</referenceTo>
		<relationshipLabel>Execution History</relationshipLabel>
		<relationshipName>Steps</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Branch__c</fullName>
		<label>Branch</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__CheckOnly__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>This only Apply for Metadata Steps. None of the other Steps types are affected by this checkbox. 
WARNING: Credits consumption will apply as a regular deployment since resource-wise is exactly the same as a real deployment.</inlineHelpText>
		<label>CheckOnly</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Commit_Id__c</fullName>
		<label>Commit Id</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Commit_Name__c</fullName>
		<label>Commit Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Completed__c</fullName>
		<formula>IF(copado__Org_Count__c &gt; 0, 
copado__Count_Completed__c / copado__Org_Count__c,
0
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>% Completed</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Percent</type>
	</fields>
	<fields>
		<fullName>copado__Count_Completed__c</fullName>
		<label># Completed</label>
		<summaryFilterItems>
			<field>copado__Deployment_Job__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Success, Failed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Deployed__c</fullName>
		<formula>IF(copado__Org_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Org_Count__c,
0
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>% Deployed</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Percent</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>Steps</relationshipLabel>
		<relationshipName>Steps</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Git_Repository__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Git Repository</label>
		<referenceTo>copado__Git_Repository__c</referenceTo>
		<relationshipLabel>Steps</relationshipLabel>
		<relationshipName>Steps</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__JsonResult__c</fullName>
		<description>An Internal field to store step result</description>
		<label>JsonResult</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Manual_Task_Notified__c</fullName>
		<defaultValue>false</defaultValue>
		<description>To prevent sending multiple notifications to the same Manual Task owner per Task</description>
		<label>Manual Task Notified</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Notify_Task_Owner__c</fullName>
		<defaultValue>&apos;None&apos;</defaultValue>
		<label>Notify Task Owner</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Notify_Task_Owner_Values</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Order__c</fullName>
		<defaultValue>1</defaultValue>
		<label>Order</label>
		<precision>18</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Org_Count__c</fullName>
		<label>Credential Count</label>
		<summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__ParentId__c</fullName>
		<label>Parent Id</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Promotion__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Used in the automation template creator. DO NOT DELETE or ADD on the layouts.</description>
		<label>Promotion</label>
		<referenceTo>copado__Promotion__c</referenceTo>
		<relationshipLabel>Steps</relationshipLabel>
		<relationshipName>Steps</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Read_Only__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Read Only</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Run_all_tests__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Run all tests</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__SUM_Deployed__c</fullName>
		<label>SUM Deployed</label>
		<summarizedField>copado__Deployment_Job__c.copado__Deployed__c</summarizedField>
		<summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Status_Flag__c</fullName>
		<formula>IMAGE( 
  CASE(  copado__Status__c,  &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
  &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
		<label>Status Flag</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Not started</fullName>
					<default>true</default>
					<label>Not started</label>
				</value>
				<value>
					<fullName>In progress</fullName>
				</value>
				<value>
					<fullName>Completed Successfully</fullName>
				</value>
				<value>
					<fullName>Completed with Errors</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>MetaData</fullName>
					<default>true</default>
					<label>MetaData</label>
				</value>
				<value>
					<fullName>Full Profiles</fullName>
				</value>
				<value>
					<fullName>Full Permission Sets</fullName>
				</value>
				<value>
					<fullName>Users</fullName>
				</value>
				<value>
					<fullName>Translations</fullName>
				</value>
				<value>
					<fullName>Data</fullName>
				</value>
				<value>
					<fullName>Bulk Data</fullName>
				</value>
				<value>
					<fullName>Data Template</fullName>
				</value>
				<value>
					<fullName>Delete MetaData</fullName>
				</value>
				<value>
					<fullName>Custom Settings</fullName>
				</value>
				<value>
					<fullName>Apex</fullName>
				</value>
				<value>
					<fullName>Git MetaData</fullName>
				</value>
				<value>
					<fullName>URL Callout</fullName>
				</value>
				<value>
					<fullName>Automation</fullName>
				</value>
				<value>
					<fullName>Function</fullName>
				</value>
				<value>
					<fullName>Test</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__View_Attachment__c</fullName>
		<formula>IF( 
  NOT(ISBLANK(copado__Attachment_Id__c)),
  HYPERLINK(&quot;/&quot;+copado__Attachment_Id__c, &quot;View&quot;, &quot;_blank&quot;),
  &quot;&quot;
)</formula>
		<label>View Attachment</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__dataJson__c</fullName>
		<description>If the step type is &quot;data&quot;  this should contains the json defining the query. 
In production this field should be HIDDEN</description>
		<label>dataJson</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<label>Step</label>
	<nameField>
		<label>Step Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Steps</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>